--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,6 +1,6 @@
 {
   "java.import.gradle.java.home": "/usr/lib/jvm/java-17-openjdk-amd64",
+  "java.jdt.ls.vmargs" : "-XX:+UseParallelGC -XX:GCTimeRatio=4 -XX:AdaptiveSizePolicyWeight=90 -Dsun.zip.disableMemoryMapping=true -Xmx4G -Xms100m -Xlog:disable",
   "coc.preferences.formatOnSaveFiletypes": ["java"],
-  "coc.preferences.enableMessageDialog": true,
-  "java.jdt.ls.vmargs" : "-XX:+UseParallelGC -XX:GCTimeRatio=4 -XX:AdaptiveSizePolicyWeight=90 -Dsun.zip.disableMemoryMapping=true -Xmx4G -Xms100m -Xlog:disable"
+  "coc.preferences.enableMessageDialog": true
 }
