--- a/config
+++ b/config
@@ -53,7 +53,7 @@ bindsym $mod+b exec firefox
 bindsym $mod+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec --no-startup-id dmenu_run
+### bindsym $mod+d exec --no-startup-id dmenu_run
 # A more modern dmenu replacement is rofi:
 # bindcode $mod+40 exec "rofi -modi drun,run -show drun"
 # There also is i3-dmenu-desktop which only displays applications shipping a
@@ -187,6 +187,20 @@ bar {
         status_command i3status
 }
 
+client.focused          #6272A4 #6272A4 #F8F8F2 #6272A4   #6272A4
+client.focused_inactive #44475A #44475A #F8F8F2 #44475A   #44475A
+client.unfocused        #282A36 #282A36 #BFBFBF #282A36   #282A36
+client.urgent           #44475A #FF5555 #F8F8F2 #FF5555   #FF5555
+client.placeholder      #282A36 #282A36 #F8F8F2 #282A36   #282A36
+
+client.background       #F8F8F2
+
+
+bindsym $mod+d exec "dmenu_run -nf '#F8F8F2' -nb '#282A36' -sb '#6272A4' -sf '#F8F8F2' -fn 'monospace-10' -p 'dmenu'"
+
+
 exec "setxkbmap -layout us,ru"
-exec "setxkbmap -option 'grp:alt_ctrl_toggle'"
+exec "setxkbmap -option 'grp:super_space_toggle'"
 exec --no-startup-id /usr/lib/gsd-xsettings
+# disable mouse acceleration
+exec --no-startup-id xinput --set-prop 9 'libinput Accel Profile Enabled' 0, 1
