--- a/.config/i3/config
+++ b/.config/i3/config
@@ -198,6 +198,7 @@ client.background       #F8F8F2
 
 bindsym $mod+d exec "dmenu_run -nf '#F8F8F2' -nb '#282A36' -sb '#6272A4' -sf '#F8F8F2' -fn 'monospace-10' -p 'dmenu'"
 
+exec always nitrogen --restore
 
 exec "setxkbmap -layout us,ru"
 exec "setxkbmap -option 'grp:super_space_toggle'"
