make terminal transparrent

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -24,5 +24,7 @@ map ctrl+l neighboring_window right
 map ctrl+k neighboring_window up
 map ctrl+j neighboring_window down
 
+background_opacity 0.95
+
 enabled_layouts splits:split_axis=horizontal
 enable_audio_bell no
