--- a/hyprland/hypr/hyprland.conf
+++ b/hyprland/hypr/hyprland.conf
@@ -2,6 +2,8 @@
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor=,preferred,auto,auto
 
+monitor=eDP-1,1920x1080@60,0x0,1
+
 # Dual monitor example on G15 Strix
 # eDP-1 is the built in monitor while DP-1 is external
 # Both monitors here are at 1440 and 165Hz
