--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,10 +5,10 @@ set -s escape-time 0
 unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
-set -g status-style 'bg=#333333 fg=#5eacd3'
+#set -g status-style 'bg=#333333 fg=#5eacd3'
 
 bind r source-file ~/.tmux.conf
-set -g base-index 1
+#set -g base-index 1
 
 set-window-option -g mode-keys vi
 bind -T copy-mode-vi v send-keys -X begin-selection
@@ -21,3 +21,4 @@ bind -r j select-pane -D
 bind -r h select-pane -L
 bind -r l select-pane -R
 
+set -g status off
