--- a/hyprland/hypr/hyprland.conf
+++ b/hyprland/hypr/hyprland.conf
@@ -19,6 +19,8 @@ exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CUR
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec-once = waybar
+#uncomment it if you want to enable macchanger and add your interface
+#exec-once = macchanger [interface] -r
 exec = swaybg -m fill -i ~/.config/hypr/wallpaper.jpg
 
 # Source a file (multi-file configs)
