add keybinds (so cool)

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,4 @@
-set -ga terminal-overrides ",screen-256color*:Tc"
+set -g terminal-overrides ",screen-254color*:Tc"
 set-option -g default-terminal "screen-256color"
 set -s escape-time 0
 
@@ -20,5 +20,11 @@ bind -r k select-pane -U
 bind -r j select-pane -D
 bind -r h select-pane -L
 bind -r l select-pane -R
+
+# shortcuts for tmux sessions
+bind-key -n M-q run-shell "tmux_sessions a code 2> /dev/null"
+bind-key -n M-w run-shell "tmux_sessions a run_code 2> /dev/null"
+bind-key -n M-e run-shell "tmux_sessions a main 2> /dev/null"
+
 
 set -g status on
