--- a/.tmux.conf
+++ b/.tmux.conf
@@ -23,8 +23,9 @@ bind -r l select-pane -R
 
 # shortcuts for tmux sessions
 bind-key -n M-q run-shell "tmux_sessions a code 2> /dev/null"
-bind-key -n M-w run-shell "tmux_sessions a run_code 2> /dev/null"
+bind-key -n M-w run-shell "tmux_sessions a run 2> /dev/null"
 bind-key -n M-e run-shell "tmux_sessions a main 2> /dev/null"
 
+bind-key -n M-f command-prompt -p "Enter session name: " "run-shell 'tmux_sessions a %1'"
 
 set -g status on
