change shortcuts from meta to ctrl

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -22,9 +22,9 @@ bind -r h select-pane -L
 bind -r l select-pane -R
 
 # shortcuts for tmux sessions
-bind-key -n M-q run-shell "tmux_sessions a code 2> /dev/null"
-bind-key -n M-w run-shell "tmux_sessions a run 2> /dev/null"
-bind-key -n M-e run-shell "tmux_sessions a main 2> /dev/null"
+bind-key -n C-q run-shell "tmux_sessions a code 2> /dev/null"
+bind-key -n C-w run-shell "tmux_sessions a run 2> /dev/null"
+bind-key -n C-e run-shell "tmux_sessions a main 2> /dev/null"
 
 bind-key -n M-f command-prompt -p "Enter session name: " "run-shell 'tmux_sessions a %1'"
 
