add wallpapers to i3

--- a/config/i3/config
+++ b/config/i3/config
@@ -198,6 +198,9 @@ bindsym $mod+Shift+r restart
 
 # keybinding in fancy rofi (automated):
 bindsym F1 exec --no-startup-id ~/.config/i3/scripts/keyhint-2
+
+bindsym $mod+shift+s exec --no-startup-id spectacle -r
+
 # alternative
 # keybinding list in editor:
 # bindsym $mod+F1 exec --no-startup-id xed ~/.config/i3/keybindings
@@ -400,7 +403,7 @@ exec --no-startup-id ~/.screenlayout/monitor.sh
 
 # set wallpaper
 # exec --no-startup-id sleep 2 && nitrogen --restore
-exec --no-startup-id sleep 1 && feh --bg-fill /usr/share/endeavouros/backgrounds/endeavouros-wallpaper.png
+exec --no-startup-id sleep 1 && feh --bg-fill $(ls .config/i3/wall.* | grep -m 1 wall)
 
 # set powersavings for display:
 exec --no-startup-id xset s 480 dpms 600 600 600
