--- a/config/i3/i3blocks.conf
+++ b/config/i3/i3blocks.conf
@@ -76,11 +76,11 @@ color=#717171
 # The directory defaults to $HOME if the instance is not specified.
 # The script may be called with a optional argument to set the alert
 # (defaults to 10 for 10%).
-[disk]
-label=
-instance=/
-command=~/.config/i3/scripts/disk
-interval=30
+# [disk]
+# label=
+# instance=/
+# command=~/.config/i3/scripts/disk
+# interval=30
 
 # Memory usage
 #
@@ -96,10 +96,10 @@ command=~/.config/i3/scripts/cpu_usage
 #min_width=CPU: 100.00%
 interval=2
 
-[CPU-temperature]
-label=
-command=~/.config/i3/scripts/temperature
-interval=30
+# [CPU-temperature]
+# label=
+# command=~/.config/i3/scripts/temperature
+# interval=30
 #T_WARN=70
 #T_CRIT=90
 #SENSOR_CHIP=""
@@ -107,14 +107,14 @@ interval=30
 # can be used also for GPU temperature or other temperature sensors lm-sensors detects.
 
 # showing name of connected network (enable for wifi use)
-#[net]
-#label=
-#command=echo "$(LANG=C nmcli d | grep connected  | awk '{print $4}')"
-#interval=30
+# [net]
+# label=
+# command=echo "$(LANG=C nmcli d | grep connected  | awk '{print $4}')"
+# interval=30
 
-[bandwidth]
-command=~/.config/i3/scripts/bandwidth2
-interval=persist
+# [bandwidth]
+# command=~/.config/i3/scripts/bandwidth2
+# interval=persist
 
 # Battery indicator
 [battery]
