--- a/config/i3/config
+++ b/config/i3/config
@@ -308,9 +308,9 @@ bindsym $mod+Shift+p exec --no-startup-id ~/.config/i3/scripts/power-profiles
 # Define names for default workspaces for which we configure key bindings later on.
 # We use variables to avoid repeating the names in multiple places.
 set $ws1 "1:"
-set $ws2 "2:"
-set $ws3 "3:"
-set $ws4 "4:"
+set $ws2 "2:󰨞"
+set $ws3 "3:"
+set $ws4 "4:"
 set $ws5 "5:"
 set $ws6 "6"
 set $ws7 "7"
@@ -329,16 +329,16 @@ set $ws10 "10"
 
 # bind program to workspace and focus to them on startup:
 assign [class="(?i)firefox"] $ws1
-assign [class="Xfce4-terminal"] $ws2
-assign [class="Thunar"] $ws3
-assign [class="thunderbird"] $ws4
+assign [class="(?i)code"] $ws2
+assign [class="kitty"] $ws3
+assign [class="Thunar"] $ws4
 assign [class="TelegramDesktop"] $ws5
 
 # automatic set focus new window if it opens on another workspace than the current:
-for_window [class=Xfce4-terminal] focus
+for_window [class=kitty] focus
 for_window [class=(?i)firefox] focus
+for_window [class=code] focus
 for_window [class=Thunar] focus
-for_window [class=Thunderbird] focus
 for_window [class=TelegramDesktop] focus
 
 ##############
