rename preset in tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -24,7 +24,7 @@ bind -r l select-pane -R
 # shortcuts for tmux sessions
 bind-key -n M-s run-shell "tmux_sessions a code 2> /dev/null"
 bind-key -n M-d run-shell "tmux_sessions a run 2> /dev/null"
-bind-key -n M-a run-shell "tmux_sessions a main 2> /dev/null"
+bind-key -n M-a run-shell "tmux_sessions a config 2> /dev/null"
 
 bind-key -n M-f command-prompt -p "Enter session name: " "run-shell 'tmux_sessions a %1'"
 
