--- a/config/sway/config
+++ b/config/sway/config
@@ -141,7 +141,7 @@ bindsym $mod+b splith
 bindsym $mod+v splitv
 
 # Switch the current container between different layout styles
-bindsym $mod+s layout stacking
+# bindsym $mod+s layout stacking #idk how to use that
 bindsym $mod+w layout tabbed
 bindsym $mod+e layout toggle split
 
