--- a/config/sway/config
+++ b/config/sway/config
@@ -210,7 +210,8 @@ bar {
 
     colors {
         statusline #ffffff
-        background #323232
+        background #000000
+        # background #323232
         inactive_workspace #323232 #323232 #5c5c5c
     }
 }
