--- a/config/i3/config
+++ b/config/i3/config
@@ -174,6 +174,7 @@ bindsym $mod+Escape exec i3lock -c 000000
 
 bindsym $mod+Shift+s exec chmod +x ~/.config/i3/bin/mirrormonitor && bash ~/.config/i3/bin/mirrormonitor
 bindsym $mod+Shift+d exec chmod +x ~/.config/i3/bin/duomonitor && bash ~/.config/i3/bin/duomonitor
+bindsym $mod+Shift+a exec chmod +x ~/.config/i3/bin/primaryonly && .config/i3/bin/primaryonly
 
 # FKeys
 # Pulse Audio controls
