--- a/config/i3/config
+++ b/config/i3/config
@@ -169,6 +169,7 @@ bar {
 # CUSTOM KEYS START
 # ------------------------------------------
 exec --no-startup-id nm-applet
+exec --no-startup-id picom --backend glx -b
 
 bindsym $mod+Escape exec i3lock -c 000000
 
@@ -195,3 +196,8 @@ bindsym XF86MonBrightnessDown exec light -U 10 # decrease screen brightness
 bindsym $mod+Shift+period exec systemctl suspend
 
 exec_always --no-startup-id feh --bg-scale ~/.config/i3/wall.jpg
+exec_always --no-startup-id setxkbmap -layout "us,ru" -option "grp:win_space_toggle"
+
+# to see all monitors run 'xrandr'
+exec_always --no-startup-id xrandr --output eDP --set TearFree on
+exec_always --no-startup-id xrandr --output HDMI-A-0 --set TearFree on
