fix language switching

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -30,3 +30,4 @@ bind-key -n M-z run-shell "tmux_sessions a config 2> /dev/null"
 bind-key -n M-f command-prompt -p "Enter session name: " "run-shell 'tmux_sessions a %1'"
 
 set -g status on
+set-option -g default-shell /bin/zsh
