--- a/config/i3/config
+++ b/config/i3/config
@@ -173,7 +173,7 @@ exec --no-startup-id chmod 777 ~/.config/i3/bin/ -R
 exec --no-startup-id lxqt-policykit-agent &
 exec --no-startup-id picom --backend glx -b
 exec --no-startup-id nm-applet
-exec --no-startup-id ~/.config/i3/bin/ibusstop
+# exec --no-startup-id ~/.config/i3/bin/ibusstop
 exec_always --no-startup-id setxkbmap -layout "us,ru" -option "grp:win_space_toggle"
 
 
