disable tmux status

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,7 +6,11 @@ unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
 set -g status-style 'bg=#333333 fg=#5eacd3'
-set -g status-position top
+set -g status-position bottom
+set -g status-right "%H:%M %d-%b-%y"
+set -g status-left "[#S] "
+set-option -g status-justify left
+set -g status off
 
 bind r source-file ~/.tmux.conf
 #set -g base-index 1
@@ -29,5 +33,4 @@ bind-key -n M-z run-shell "tmux_sessions a config 2> /dev/null"
 
 bind-key -n M-f command-prompt -p "Enter session name: " "run-shell 'tmux_sessions a %1'"
 
-set -g status on
 set-option -g default-shell /bin/zsh
