remove tmux workspaces

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -27,9 +27,9 @@ bind -r h select-pane -L
 bind -r l select-pane -R
 
 # shortcuts for tmux sessions
-bind-key -n M-x run-shell "tmux_sessions a code 2> /dev/null"
-bind-key -n M-c run-shell "tmux_sessions a run 2> /dev/null"
-bind-key -n M-z run-shell "tmux_sessions a config 2> /dev/null"
+bind-key -n M-z run-shell "tmux_sessions a code 2> /dev/null"
+bind-key -n M-x run-shell "tmux_sessions a run1 2> /dev/null"
+bind-key -n M-c run-shell "tmux_sessions a run2 2> /dev/null"
 
 bind-key -n M-f command-prompt -p "Enter session name: " "run-shell 'tmux_sessions a %1'"
 
