add all config files

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -1,6 +1,6 @@
 # Setup monitors
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=,preferred,auto,auto
+monitor=,preferred,auto,1
 
 monitor=eDP-1,1920x1080@60,0x0,1
 
@@ -17,7 +17,10 @@ monitor=eDP-1,1920x1080@60,0x0,1
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = waybar
-exec = swaybg -m fill -i ~/.config/hypr/wallpaper.jpg
+exec-once = swaybg -m fill -i ~/.config/hypr/wallpaper.jpg
+exec-once = mako -c ~/.config/mako/config
+
+windowrulev2=noblur,class:^()$,title:^()$
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
@@ -27,10 +30,10 @@ input {
     kb_layout = us,ru
     kb_variant =
     kb_model =
-    kb_options = grp:alt_shift_toggle
+    kb_options = grp:win_space_toggle
     kb_rules =
 
-    follow_mouse = 1
+    follow_mouse = 0
 
     touchpad {
         natural_scroll = yes
@@ -38,6 +41,7 @@ input {
 
     # leave it as it is for touch pad and set up each mouse separatly
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
+    accel_profile = flat
 }
 
 general {
@@ -107,8 +111,9 @@ gestures {
 # Example per-device config
 # See https://wiki.hyprland.org/Configuring/Keywords/#executing for more
 # u can get name of mouse using `hyprctl devices`
-device:compx-2.4g-wireless-receiver {
-    sensitivity = -0.6
+device {
+    name = compx-2.4g-wireless-receiver
+    sensitivity = 0.5
 }
 
 # Example windowrule v1
@@ -117,33 +122,36 @@ device:compx-2.4g-wireless-receiver {
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 # rules below would make the specific app transparent
-windowrulev2 = opacity 0.8 0.8,class:^(kitty)$
-windowrulev2 = opacity 0.8 0.8,class:^(thunar)$
+# windowrulev2 = opacity 0.8 0.8,class:^(kitty)$
+# windowrulev2 = opacity 0.8 0.8,class:^(thunar)$
 # windowrulev2 = opacity 0.8 0.8,class:^(chromium)$
 # windowrulev2 = opacity 0.8 0.8,class:^(Code)$
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
-$mainMod = SUPER
+$mainMod = ALT
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, Q, exec, kitty  #open the terminal
-bind = $mainMod, C, killactive, # close the active window
-bind = $mainMod, L, exec, swaylock # Lock the screen
+bind = $mainMod, RETURN, exec, kitty  #open the terminal
+bind = $mainMod, Q, killactive, # close the active window
 bind = $mainMod, M, exec, wlogout --protocol layer-shell # show the logout window
 bind = $mainMod SHIFT, M, exit, # Exit Hyprland all together no (force quit Hyprland)
 bind = $mainMod, E, exec, thunar # Show the graphical file browser
 bind = $mainMod, V, togglefloating, # Allow a window to float
-bind = $mainMod, SPACE, exec, wofi # Show the graphicall app launcher
+bind = $mainMod, SPACE, exec, fuzzel # Show the graphicall app launcher
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, S, exec, grim -t jpeg -q 100 -g "$(slurp)" - | swappy -f - # take a screenshot
-bind = $mainMod, F, fullscreen, 1 
+bind = $mainMod, F, fullscreen, 0 
 
 # Move focus with mainMod + arrow keys
-bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
 bind = $mainMod, up, movefocus, u
 bind = $mainMod, down, movefocus, d
+
+bind = $mainMod, H, movefocus, l
+bind = $mainMod, L, movefocus, r
+bind = $mainMod, K, movefocus, u
+bind = $mainMod, J, movefocus, d
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
@@ -176,3 +184,16 @@ bind = $mainMod, mouse_up, workspace, e-1
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
+
+bind = $mainMod SHIFT, S, exec,hyprctl keyword monitor "eDP-1, disable"
+bind = $mainMod SHIFT, A, exec,hyprctl keyword monitor "eDP-1, enable"
+
+binde=, XF86AudioRaiseVolume, exec, wpctl set-volume -l 1.5 @DEFAULT_AUDIO_SINK@ 5%+
+binde=, XF86AudioLowerVolume, exec, wpctl set-volume -l 1.5 @DEFAULT_AUDIO_SINK@ 5%-
+
+bindl=, XF86AudioRaiseVolume, exec, wpctl set-volume -l 1.5 @DEFAULT_AUDIO_SINK@ 5%+
+bindl=, XF86AudioLowerVolume, exec, wpctl set-volume -l 1.5 @DEFAULT_AUDIO_SINK@ 5%-
+bindl=, XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
+
+bindl=, XF86MonBrightnessUp, exec, light -A 10
+bindl=, XF86MonBrightnessDown, exec, light -U 10
