add some things to tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -31,6 +31,16 @@ bind-key -n M-z run-shell "tmux_sessions a code 2> /dev/null"
 bind-key -n M-x run-shell "tmux_sessions a run1 2> /dev/null"
 bind-key -n M-c run-shell "tmux_sessions a run2 2> /dev/null"
 
+bind -r 1 run-shell "tmux_sessions a 1 2> /dev/null"
+bind -r 2 run-shell "tmux_sessions a 2 2> /dev/null"
+bind -r 3 run-shell "tmux_sessions a 3 2> /dev/null"
+bind -r 4 run-shell "tmux_sessions a 4 2> /dev/null"
+bind -r 5 run-shell "tmux_sessions a 5 2> /dev/null"
+bind -r 6 run-shell "tmux_sessions a 6 2> /dev/null"
+bind -r 7 run-shell "tmux_sessions a 7 2> /dev/null"
+bind -r 8 run-shell "tmux_sessions a 8 2> /dev/null"
+bind -r 9 run-shell "tmux_sessions a 9 2> /dev/null"
+
 bind-key -n M-f command-prompt -p "Enter session name: " "run-shell 'tmux_sessions a %1'"
 
 set-option -g default-shell /bin/zsh
