--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1,4 +1,4 @@
-include ./mocha.conf
+include ./latte.conf
 font_family      jetbrains mono nerd font
 font_size        16
 bold_font        auto
@@ -13,3 +13,4 @@ confirm_os_window_close 0
 # background_opacity 0.95
 enable_audio_bell no
 hide_window_decorations yes
+shell /bin/zsh
