--- a/config/i3/config
+++ b/config/i3/config
@@ -184,9 +184,9 @@ exec --no-startup-id lxqt-policykit-agent &
 exec --no-startup-id picom --backend glx -b
 exec --no-startup-id nm-applet
 exec_always --no-startup-id setxkbmap -layout "us,ru" -option "grp:win_space_toggle"
-exec --no-startup-id moka
-exec_always for id in $(xinput list | grep "pointer" | cut -d '=' -f 2 | cut -f 1); do xinput --set-prop $id 'libinput Accel Profile Enabled' 0, 1; done
-exec_always for id in $(xinput list | grep "pointer" | cut -d '=' -f 2 | cut -f 1); do xinput --set-prop $id 'libinput Accel Speed' 0.5; done
+exec --no-startup-id mako
+exec_always --no-startup-id for id in $(xinput list | grep "pointer" | cut -d '=' -f 2 | cut -f 1); do xinput --set-prop $id 'libinput Accel Profile Enabled' 0, 1; done
+exec_always --no-startup-id for id in $(xinput list | grep "pointer" | cut -d '=' -f 2 | cut -f 1); do xinput --set-prop $id 'libinput Accel Speed' 0.5; done
 
 bindsym $mod+Escape exec --no-startup-id i3lock -c 000000
 
@@ -212,7 +212,7 @@ bindsym XF86MonBrightnessDown exec --no-startup-id light -U 10 # decrease screen
 # Suspend
 bindsym $mod+Shift+period exec systemctl suspend
 
-exec_always --no-startup-id feh --bg-scale ~/.config/i3/wall.jpg
+exec_always --no-startup-id feh --bg-scale ~/.config/i3/wall.png
 
 # to see all monitors run 'xrandr'
 exec_always --no-startup-id xrandr --output eDP --set TearFree on
