--- a/config/i3/config
+++ b/config/i3/config
@@ -93,6 +93,8 @@ bindsym $mod+s layout stacking
 bindsym $mod+w layout tabbed
 bindsym $mod+e layout toggle split
 
+workspace_layout tabbed
+
 # toggle tiling / floating
 bindsym $mod+Shift+space floating toggle
 bindsym $mod+space focus mode_toggle
