--- a/config/kitty/latte.conf
+++ b/config/kitty/latte.conf
@@ -15,8 +15,8 @@ selection_foreground    #EFF1F5
 selection_background    #DC8A78
 
 # Cursor colors
-cursor                  #DC8A78
-cursor_text_color       #EFF1F5
+cursor                  #FFC107
+cursor_text_color       #000000
 
 # URL underline color when hovering with mouse
 url_color               #DC8A78
