--- a/config/kitty/mocha.conf
+++ b/config/kitty/mocha.conf
@@ -15,8 +15,8 @@ selection_foreground    #1E1E2E
 selection_background    #F5E0DC
 
 # Cursor colors
-cursor                  #F5E0DC
-cursor_text_color       #1E1E2E
+cursor                  #FFC107
+cursor_text_color       #000000
 
 # URL underline color when hovering with mouse
 url_color               #F5E0DC
