--- a/config/i3/config
+++ b/config/i3/config
@@ -222,7 +222,7 @@ bindsym XF86MonBrightnessDown exec --no-startup-id light -U 10 # decrease screen
 # Suspend
 bindsym $mod+Shift+period exec systemctl suspend
 
-exec_always --no-startup-id feh --bg-scale ~/.config/i3/wall.png
+exec_always --no-startup-id feh --bg-scale ~/.config/i3/dark.jpg
 
 # to see all monitors run 'xrandr'
 exec_always --no-startup-id xrandr --output eDP --set TearFree on
