--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1,6 +1,7 @@
-include ./gruber.conf
-font_family      jetbrains mono nerd font
-font_size        18
+include ./ring0-light.conf
+# font_family      jetbrains mono nerd font
+font_family      Iosevka term semibold
+font_size        20
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
