--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1,6 +1,5 @@
-include ./ring0-light.conf
-# font_family      jetbrains mono nerd font
-font_family      Iosevka term semibold
+include ./latte.conf
+font_family      Hack Bold
 font_size        20
 bold_font        auto
 italic_font      auto
