--- a/config/kitty/latte.conf
+++ b/config/kitty/latte.conf
@@ -15,7 +15,7 @@ selection_foreground    #EFF1F5
 selection_background    #DC8A78
 
 # Cursor colors
-cursor                  #FFC107
+cursor                  #912BBC
 cursor_text_color       #000000
 
 # URL underline color when hovering with mouse
