colors tweaking and font

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1,5 +1,5 @@
 include ./latte.conf
-font_family      Hack Bold
+font_family      JetBrains mono nerd font
 font_size        20
 bold_font        auto
 italic_font      auto
