change kitty cursor color

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1,4 +1,4 @@
-include ./gruber.conf
+include ./ring0-light.conf
 font_family      JetBrains mono nerd font
 font_size        20
 bold_font        auto
