change font in kitty (trying)

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1,6 +1,6 @@
-include ./ring0-light.conf
-font_family      JetBrains mono nerd font
-font_size        20
+include ./gruber.conf
+font_family      Iosevka Fixed SemiBold Extended
+font_size        24
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
