change font back

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1,5 +1,5 @@
 include ./gruber.conf
-font_family      Iosevka Fixed SemiBold Extended
+font_family      JetBrainsMono NF
 font_size        24
 bold_font        auto
 italic_font      auto
