fix tmux copy bug

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -15,6 +15,7 @@ set -g status off
 bind r source-file ~/.tmux.conf
 #set -g base-index 1
 
+set-option -g set-clipboard off
 set-window-option -g mode-keys vi
 bind -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
